Release mod loader v0.1.26