@@ -3,26 +3,23 @@ package com.goldendaysgaming.minecraft;
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import com.google.gson.reflect.TypeToken;
-import net.minecraft.ChatFormatting;
 import net.minecraft.client.Minecraft;
-import net.minecraft.client.gui.GuiGraphics;
-import net.minecraft.client.gui.components.Button;
-import net.minecraft.client.gui.components.Tooltip;
-import net.minecraft.client.gui.screens.ConnectScreen;
-import net.minecraft.client.gui.screens.Screen;
-import net.minecraft.client.gui.screens.TitleScreen;
+import net.minecraft.client.gui.Gui;
+import net.minecraft.client.gui.GuiButton;
+import net.minecraft.client.gui.GuiMainMenu;
+import net.minecraft.client.gui.GuiScreen;
 import net.minecraft.client.multiplayer.ServerData;
-import net.minecraft.client.multiplayer.ServerStatusPinger;
-import net.minecraft.client.multiplayer.resolver.ServerAddress;
-import net.minecraft.network.chat.Component;
-import net.minecraftforge.api.distmarker.Dist;
-import net.minecraftforge.client.event.ScreenEvent;
+import net.minecraft.client.network.ServerPinger;
+import net.minecraft.util.text.TextFormatting;
+import net.minecraftforge.client.event.GuiOpenEvent;
+import net.minecraftforge.client.event.GuiScreenEvent;
 import net.minecraftforge.common.MinecraftForge;
-import net.minecraftforge.event.TickEvent;
-import net.minecraftforge.eventbus.api.SubscribeEvent;
+import net.minecraftforge.fml.client.FMLClientHandler;
+import net.minecraftforge.fml.common.Loader;
 import net.minecraftforge.fml.common.Mod;
-import net.minecraftforge.fml.loading.FMLEnvironment;
-import net.minecraftforge.fml.loading.FMLPaths;
+import net.minecraftforge.fml.common.event.FMLInitializationEvent;
+import net.minecraftforge.fml.common.eventhandler.SubscribeEvent;
+import net.minecraftforge.fml.common.gameevent.TickEvent;
 
 import java.io.IOException;
 import java.lang.reflect.Type;
@@ -31,74 +28,92 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.Map;
-import java.util.WeakHashMap;
 
-@Mod(GdgQuickJoin.MOD_ID)
+@Mod(
+    modid = GdgQuickJoin.MOD_ID,
+    name = GdgQuickJoin.MOD_NAME,
+    version = GdgQuickJoin.VERSION,
+    acceptedMinecraftVersions = "[1.12.2]",
+    acceptableRemoteVersions = "*",
+    clientSideOnly = true
+)
 public final class GdgQuickJoin {
     public static final String MOD_ID = "gdgquickjoin";
+    public static final String MOD_NAME = "GDG Minecraft Quick Join";
+    public static final String VERSION = "0.2.0";
 
-    public GdgQuickJoin() {
-        if (FMLEnvironment.dist == Dist.CLIENT) {
-            MinecraftForge.EVENT_BUS.register(ClientEvents.class);
-        }
+    @Mod.EventHandler
+    public void initialize(FMLInitializationEvent event) {
+        MinecraftForge.EVENT_BUS.register(new ClientEvents());
     }
 
     private static final class ClientEvents {
-        private static final Map<Screen, QuickJoinPanel> PANELS = Collections.synchronizedMap(new WeakHashMap<>());
+        private QuickJoinPanel activePanel;
 
         @SubscribeEvent
-        public static void onScreenInit(ScreenEvent.Init.Post event) {
-            if (!(event.getScreen() instanceof TitleScreen titleScreen)) {
+        public void onGuiInit(GuiScreenEvent.InitGuiEvent.Post event) {
+            if (!isSupportedTitleScreen(event.getGui())) {
                 return;
             }
 
-            QuickJoinPanel previous = PANELS.remove(titleScreen);
-            if (previous != null) {
-                previous.close();
-            }
-            QuickJoinPanel panel = new QuickJoinPanel(titleScreen, ServerDirectory.load());
-            panel.addWidgets(event);
-            PANELS.put(titleScreen, panel);
+            closePanel();
+            activePanel = new QuickJoinPanel(event.getGui(), ServerDirectory.load());
+            activePanel.addButtons(event.getButtonList());
         }
 
         @SubscribeEvent
-        public static void onScreenRenderPre(ScreenEvent.Render.Pre event) {
-            QuickJoinPanel panel = PANELS.get(event.getScreen());
-            if (panel != null) {
-                panel.renderBackground(event.getGuiGraphics());
+        public void onGuiDraw(GuiScreenEvent.DrawScreenEvent.Post event) {
+            if (activePanel != null && activePanel.belongsTo(event.getGui())) {
+                activePanel.draw(event.getMouseX(), event.getMouseY(), event.getRenderPartialTicks());
             }
         }
 
         @SubscribeEvent
-        public static void onScreenRenderPost(ScreenEvent.Render.Post event) {
-            QuickJoinPanel panel = PANELS.get(event.getScreen());
-            if (panel != null) {
-                panel.renderForeground(event.getGuiGraphics());
+        public void onButtonPressed(GuiScreenEvent.ActionPerformedEvent.Post event) {
+            if (activePanel != null && activePanel.belongsTo(event.getGui())) {
+                activePanel.handleButton(event.getButton());
             }
         }
 
         @SubscribeEvent
-        public static void onClientTick(TickEvent.ClientTickEvent event) {
+        public void onClientTick(TickEvent.ClientTickEvent event) {
             if (event.phase != TickEvent.Phase.END) {
                 return;
             }
 
-            Screen screen = Minecraft.getInstance().screen;
-            QuickJoinPanel active = screen == null ? null : PANELS.get(screen);
-            if (active != null) {
-                active.tick();
+            GuiScreen current = Minecraft.getMinecraft().currentScreen;
+            if (activePanel != null && !activePanel.belongsTo(current)) {
+                closePanel();
+            }
+            if (activePanel != null) {
+                activePanel.tick();
             }
         }
 
         @SubscribeEvent
-        public static void onScreenClosing(ScreenEvent.Closing event) {
-            QuickJoinPanel panel = PANELS.remove(event.getScreen());
-            if (panel != null) {
-                panel.close();
+        public void onGuiOpen(GuiOpenEvent event) {
+            if (activePanel != null && !activePanel.belongsTo(event.getGui())) {
+                closePanel();
             }
+        }
+
+        private void closePanel() {
+            if (activePanel != null) {
+                activePanel.close();
+                activePanel = null;
+            }
+        }
+
+        private static boolean isSupportedTitleScreen(GuiScreen gui) {
+            if (gui instanceof GuiMainMenu) {
+                return true;
+            }
+            String className = gui == null ? "" : gui.getClass().getName();
+            return "lumien.custommainmenu.gui.GuiCustom".equals(className)
+                || "lumien.custommainmenu.gui.GuiFakeMain".equals(className);
         }
     }
 
@@ -106,24 +121,29 @@ public final class GdgQuickJoin {
         private static final int PANEL_WIDTH = 276;
         private static final int HEADER_HEIGHT = 34;
         private static final int ROW_HEIGHT = 28;
+        private static final int BUTTON_ID_BASE = 17820;
         private static final long REPING_INTERVAL_MS = 30_000L;
 
-        private final TitleScreen parent;
-        private final List<ServerRow> rows = new ArrayList<>();
-        private final ServerStatusPinger pinger = new ServerStatusPinger();
+        private final GuiScreen parent;
+        private final List<ServerRow> rows = new ArrayList<ServerRow>();
+        private final ServerPinger pinger = new ServerPinger();
         private int x;
         private int y;
         private int width;
         private long nextPingAt;
 
-        private QuickJoinPanel(TitleScreen parent, List<ServerEntry> servers) {
+        private QuickJoinPanel(GuiScreen parent, List<ServerEntry> servers) {
             this.parent = parent;
             for (ServerEntry entry : servers) {
                 rows.add(new ServerRow(entry));
             }
         }
 
-        private void addWidgets(ScreenEvent.Init.Post event) {
+        private boolean belongsTo(GuiScreen screen) {
+            return parent == screen;
+        }
+
+        private void addButtons(List<GuiButton> buttonList) {
             width = Math.min(PANEL_WIDTH, Math.max(220, parent.width / 3));
             x = parent.width - width - 10;
             y = 34;
@@ -131,41 +151,38 @@ public final class GdgQuickJoin {
             for (int index = 0; index < rows.size(); index++) {
                 ServerRow row = rows.get(index);
                 int buttonY = y + HEADER_HEIGHT + index * ROW_HEIGHT;
-                row.button = Button.builder(Component.literal(row.entry.name()), ignored -> connect(row))
-                    .bounds(x + 10, buttonY, width - 20, 22)
-                    .tooltip(Tooltip.create(Component.literal(row.entry.description() + "\n" + row.entry.address())))
-                    .build();
-                event.addListener(row.button);
+                row.button = new GuiButton(BUTTON_ID_BASE + index, x + 10, buttonY, width - 20, 22, row.entry.name);
+                buttonList.add(row.button);
             }
 
             pingAll();
         }
 
-        private void renderBackground(GuiGraphics graphics) {
+        private void draw(int mouseX, int mouseY, float partialTicks) {
+            Minecraft minecraft = Minecraft.getMinecraft();
             int height = HEADER_HEIGHT + rows.size() * ROW_HEIGHT + 8;
-            graphics.fill(x, y, x + width, y + height, 0xC0121820);
-            graphics.fill(x, y, x + 3, y + height, 0xFFFFB000);
-        }
-
-        private void renderForeground(GuiGraphics graphics) {
-            Minecraft minecraft = Minecraft.getInstance();
-            graphics.drawString(
-                minecraft.font,
-                Component.literal("GOLDEN DAYS SERVERS").withStyle(ChatFormatting.GOLD, ChatFormatting.BOLD),
+            Gui.drawRect(x, y, x + width, y + height, 0xC0121820);
+            Gui.drawRect(x, y, x + 3, y + height, 0xFFFFB000);
+            minecraft.fontRenderer.drawStringWithShadow(
+                TextFormatting.GOLD.toString() + TextFormatting.BOLD + "GOLDEN DAYS SERVERS",
                 x + 12,
                 y + 11,
-                0xFFFFFFFF,
-                true
+                0xFFFFFF
             );
+
+            for (ServerRow row : rows) {
+                if (row.button != null) {
+                    row.button.drawButton(minecraft, mouseX, mouseY, partialTicks);
+                }
+            }
         }
 
         private void tick() {
-            pinger.tick();
+            pinger.pingPendingNetworks();
             long now = System.currentTimeMillis();
             for (ServerRow row : rows) {
                 row.updateFromPing(now);
             }
-
             if (now >= nextPingAt) {
                 pingAll();
             }
@@ -173,33 +190,36 @@ public final class GdgQuickJoin {
 
         private void pingAll() {
             nextPingAt = System.currentTimeMillis() + REPING_INTERVAL_MS;
-            pinger.removeAll();
+            pinger.clearPendingNetworks();
 
             for (ServerRow row : rows) {
                 row.beginPing();
                 try {
-                    pinger.pingServer(row.data, row::refreshLabel);
+                    pinger.ping(row.data);
                 } catch (UnknownHostException exception) {
                     row.markOffline("Unknown host");
                 }
             }
         }
 
-        private void close() {
-            pinger.removeAll();
+        private void handleButton(GuiButton button) {
+            for (ServerRow row : rows) {
+                if (row.button == button) {
+                    FMLClientHandler.instance().connectToServer(parent, row.data);
+                    return;
+                }
+            }
         }
 
-        private void connect(ServerRow row) {
-            Minecraft minecraft = Minecraft.getInstance();
-            ServerAddress address = ServerAddress.parseString(row.entry.address());
-            ConnectScreen.startConnecting(parent, minecraft, address, row.data, false);
+        private void close() {
+            pinger.clearPendingNetworks();
         }
     }
 
     private static final class ServerRow {
         private final ServerEntry entry;
         private final ServerData data;
-        private Button button;
+        private GuiButton button;
         private boolean checking = true;
         private boolean online;
         private String error = "";
@@ -207,7 +227,7 @@ public final class GdgQuickJoin {
 
         private ServerRow(ServerEntry entry) {
             this.entry = entry;
-            this.data = new ServerData(entry.name(), entry.address(), false);
+            this.data = new ServerData(entry.name, entry.address, false);
         }
 
         private void beginPing() {
@@ -216,18 +236,18 @@ public final class GdgQuickJoin {
             error = "";
             pingStartedAt = System.currentTimeMillis();
             data.pinged = false;
-            data.ping = -2L;
+            data.pingToServer = -2L;
             refreshLabel();
         }
 
         private void updateFromPing(long now) {
-            if (checking && data.ping >= 0L) {
+            if (checking && data.pingToServer >= 0L) {
                 checking = false;
                 online = true;
             } else if (checking && now - pingStartedAt >= 5_000L) {
                 checking = false;
                 online = false;
-                error = data.motd == null ? "Timed out" : data.motd.getString();
+                error = data.serverMOTD == null ? "Timed out" : data.serverMOTD;
             }
             refreshLabel();
         }
@@ -244,52 +264,69 @@ public final class GdgQuickJoin {
                 return;
             }
 
-            Component state;
+            String state;
             if (checking) {
-                state = Component.literal("CHECKING").withStyle(ChatFormatting.YELLOW);
+                state = TextFormatting.YELLOW + "CHECKING";
             } else if (online) {
-                String players = data.status == null ? "" : "  " + data.status.getString();
-                state = Component.literal("ONLINE" + players).withStyle(ChatFormatting.GREEN);
+                String players = data.populationInfo == null ? "" : "  " + data.populationInfo;
+                state = TextFormatting.GREEN + "ONLINE" + players;
             } else {
-                state = Component.literal(error.isBlank() ? "OFFLINE" : "OFFLINE").withStyle(ChatFormatting.RED);
+                state = TextFormatting.RED + "OFFLINE";
             }
-
-            button.setMessage(Component.literal(entry.name() + "  •  ").append(state));
+            button.displayString = entry.name + TextFormatting.RESET + "  •  " + state;
         }
     }
 
-    private record ServerEntry(String id, String name, String address, String description) {
+    private static final class ServerEntry {
+        private String id;
+        private String name;
+        private String address;
+        private String description;
+
+        private ServerEntry(String id, String name, String address, String description) {
+            this.id = id;
+            this.name = name;
+            this.address = address;
+            this.description = description;
+        }
     }
 
     private static final class ServerDirectory {
         private static final Gson GSON = new GsonBuilder().setPrettyPrinting().create();
         private static final Type SERVER_LIST_TYPE = new TypeToken<List<ServerEntry>>() { }.getType();
-        private static final List<ServerEntry> DEFAULT_SERVERS = List.of(
+        private static final List<ServerEntry> DEFAULT_SERVERS = Collections.unmodifiableList(Arrays.asList(
             new ServerEntry(
                 "gdg-minecraft-superior",
-                "Superior RPG 1.8.3",
+                "Stoneblock 2",
                 "goldendays.mcsh.io:25565",
-                "Golden Days Gaming public Minecraft Java server"
+                "Golden Days Gaming public Stoneblock 2 server"
             )
-        );
+        ));
 
         private static List<ServerEntry> load() {
-            Path configPath = FMLPaths.CONFIGDIR.get().resolve("gdg-quick-join.json");
+            Path configPath = Loader.instance().getConfigDir().toPath().resolve("gdg-quick-join.json");
             try {
                 if (Files.notExists(configPath)) {
                     Files.createDirectories(configPath.getParent());
-                    Files.writeString(configPath, GSON.toJson(DEFAULT_SERVERS), StandardCharsets.UTF_8);
+                    Files.write(configPath, GSON.toJson(DEFAULT_SERVERS).getBytes(StandardCharsets.UTF_8));
                     return DEFAULT_SERVERS;
                 }
 
-                List<ServerEntry> entries = GSON.fromJson(Files.readString(configPath, StandardCharsets.UTF_8), SERVER_LIST_TYPE);
+                String json = new String(Files.readAllBytes(configPath), StandardCharsets.UTF_8);
+                List<ServerEntry> entries = GSON.fromJson(json, SERVER_LIST_TYPE);
                 if (entries == null || entries.isEmpty()) {
                     return DEFAULT_SERVERS;
                 }
-                return entries.stream()
-                    .filter(entry -> entry != null && entry.name() != null && entry.address() != null)
-                    .toList();
-            } catch (IOException | RuntimeException ignored) {
+                List<ServerEntry> valid = new ArrayList<ServerEntry>();
+                for (ServerEntry entry : entries) {
+                    if (entry != null && entry.name != null && entry.address != null) {
+                        valid.add(entry);
+                    }
+                }
+                return valid.isEmpty() ? DEFAULT_SERVERS : valid;
+            } catch (IOException exception) {
+                return DEFAULT_SERVERS;
+            } catch (RuntimeException exception) {
                 return DEFAULT_SERVERS;
             }
         }
